fix(ui): removed underline for lables headings with links (#175)

--- a/app/assets/stylesheets/src/shared/_datagrid.scss
+++ b/app/assets/stylesheets/src/shared/_datagrid.scss
@@ -49,6 +49,10 @@
   }
 }
 
+a.table-sort {
+  text-decoration: none;
+}
+
 // The `-webkit` attributes are needed to support some older browsers
 .table-sort {
   &:after {
