fix(ui): task name now centered (#189)

--- a/app/views/ats/tasks/_main_content.html.slim
+++ b/app/views/ats/tasks/_main_content.html.slim
@@ -28,7 +28,7 @@ ruby:
         label.form-check-label for=checkbox_id
     .col data-controller="inline-edit-form"
       .hstack.justify-content-between data-inline-edit-form-target="showView"
-        h2.d-inline-block.mb-0 style="min-height: 32px;"
+        h2.d-inline-block.mb-0
           = task.name
         = render IconButtonComponent.new( \
                    :pencil,
