feat(disqualify_reason): update placements logic and views (#112)
* Update placements status enum

* Update fixtures

* Update fixtures

* Update placement change logic

* Update views

* Update candidate grid's filter

* Update test

* Update dashboard and candidate grid

* Update candidate grid helper

* Update fixture and test

* Add validation

* Add tests for placement change operation

* Add test for validation

* Replace call to locale with reason's description

* Fix mistakes

* Update test

* Add disqualify_reason_id assignment to migration

* Update placement_change operation

* Updated tenant's create_mandatory_disqualify_reasons

* Removed redundant branch

* Remove unnecessary locale entries

* Updated comment

* Update tests

* Revert "Remove unnecessary locale entries"

This reverts commit 34375e0a8e906e01087d225b9c8b8c72a38d91d7.

* Update test

* Revert tenant method update

* Update candidate grid

* Update operation

* Pass disqualify_reason_id to operation

* Update grid logic

* Add locale entry

* Update test

* Update change status operation

* Update candidate's grid

* Update placements controller

* Replace update with assignment in test

* Removed empty line

--- a/app/views/ats/placements/_placement.html.slim
+++ b/app/views/ats/placements/_placement.html.slim
@@ -1,7 +1,7 @@
 ruby:
   tooltip_text =
     StringIO.open do |s|
-      s << "Disqualify reason: #{placement.status.humanize} <br>" if placement.disqualified?
+      s << "Disqualify reason: #{placement.disqualify_reason.title} <br>" if placement.disqualified?
       s << t("core.last_activity_time",
              time: short_time_ago_in_words(placement.last_modification_event.performed_at))
       sanitize(s.string)
