refactor(career site): career site color changes (#187)
* body bg white

* text secondary for recaptcha text

* gray-500 for footer links

* `$gray-500` -> `--tblr-secondary`

--- a/app/assets/stylesheets/src/career_site/_main.scss
+++ b/app/assets/stylesheets/src/career_site/_main.scss
@@ -36,9 +36,9 @@ footer {
   a,
   span,
   div {
-    color: $gray-600;
+    color: var(--tblr-secondary);
     &:visited:not(.btn, .nav-link, .dropdown-item, .badge) {
-      color: $gray-600;
+      color: var(--tblr-secondary);
     }
   }
 }
