--- a/app/views/layouts/career_site/application.html.slim
+++ b/app/views/layouts/career_site/application.html.slim
@@ -43,7 +43,7 @@ html
       = javascript_include_tag "recaptcha"
       - onload = "&onload=onGrecaptchaLoad"
       script[defer="true" src="https://www.google.com/recaptcha/api.js?render=#{RecaptchaV3::SITE_KEY}#{onload}"]
-  body#career_site
+  body#career_site.bg-white
     .wrapper id=@page_id
       main.container.container-small
         = render partial: "shared/notification"
