fix: updated styles on career site (#166)

--- a/app/assets/stylesheets/src/career_site/_main.scss
+++ b/app/assets/stylesheets/src/career_site/_main.scss
@@ -2,6 +2,18 @@ body {
   padding-top: 0rem;
 }
 
+h1,
+h2,
+span,
+div {
+  color: var(--tblr-gray-800);
+}
+
+hr {
+  border-color: var(--tblr-border-color);
+  opacity: 1;
+}
+
 .container-small {
   min-width: 320px;
   max-width: 740px;
@@ -25,9 +37,10 @@ footer .container-fluid {
   min-height: calc(100% - #{$footer-min-height});
 }
 
+#application_form a,
 #back_on_all_positions a,
-#application_form a {
-  color: $blue-500;
+a div {
+  color: var(--tblr-primary);
 }
 
 footer {
@@ -59,7 +72,7 @@ footer {
   border-left: none;
   border-right: none;
   border-top: none;
-  border-bottom: 1px solid $gray-500;
+  border-bottom: 1px solid var(--tblr-border-color);
   border-radius: 0;
 }
 
@@ -76,7 +89,7 @@ footer {
 
 .position_location {
   text-decoration: none;
-  color: var(--tblr-body-color);
+  color: var(--tblr-gray-800);
 }
 
 .position_location:hover {
