fix(ui): activities list-group became tabler activity (#192)
Co-authored-by: Liamshin Ilia <lyamsh@yandex.kz>

--- a/app/assets/stylesheets/src/shared/_profile.scss
+++ b/app/assets/stylesheets/src/shared/_profile.scss
@@ -171,3 +171,18 @@
     }
   }
 }
+
+#activities {
+  .card-body {
+    --tblr-card-spacer-y: 12px;
+
+    .divide-y {
+      > :not(template):not(:last-child) {
+        padding-bottom: 12px !important;
+      }
+      > :not(template):not(:first-child) {
+        padding-top: 12px !important;
+      }
+    }
+  }
+}
