--- a/app/assets/stylesheets/entrypoints/component_preview.scss
+++ b/app/assets/stylesheets/entrypoints/component_preview.scss
@@ -14,4 +14,5 @@ $font-family-sans-serif: "Open Sans", Arial, Helvetica, sans-serif;
 
 body {
   padding: 1rem;
+  background-color: var(--tblr-white);
 }
