--- a/app/views/kaminari/ats/_paginator.html.slim
+++ b/app/views/kaminari/ats/_paginator.html.slim
@@ -5,9 +5,9 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
     paginator:     the paginator that renders the pagination tags inside
-    klass:         additional classes for wrapper
+    class:         additional classes for wrapper
 == paginator.render do
-  nav.page-paginator aria-label="pager" class=klass
+  nav.page-paginator.mt-3 aria-label="pager" class=local_assigns[:class]
     ul.pagination.flex-wrap.mb-0
       == first_page_tag
       == prev_page_tag
