fix(ui): missed anchor target effect for activity (#203)
And some other style changes for pagination

--- a/app/assets/stylesheets/src/shared/_profile.scss
+++ b/app/assets/stylesheets/src/shared/_profile.scss
@@ -183,6 +183,9 @@
       > :not(template):not(:first-child) {
         padding-top: 12px !important;
       }
+      > :target {
+        background-color: var(--tblr-blue-lt);
+      }
     }
   }
 }
