--- a/app/views/kaminari/ats/_page.html.slim
+++ b/app/views/kaminari/ats/_page.html.slim
@@ -6,6 +6,6 @@
     total_pages:   total number of pages
     per_page:      number of items to fetch per page
     remote:        data-remote
-li class=("page-item prev #{'disabled active' if page.current?} #{'d-none d-sm-block' unless page.current?}")
+li class=("page-item #{'pe-none active' if page.current?} #{'d-none d-sm-block' unless page.current?}")
   = link_to page, url, { remote:, custom_rel: page.rel, class: "page-link",
                          data: { turbo_frame: "_top" } }
