fix: updated line-height for recaptcha text (#200)
Co-authored-by: Grigory <64950366+PrinceYauj@users.noreply.github.com>

--- a/app/assets/stylesheets/entrypoints/ats.scss
+++ b/app/assets/stylesheets/entrypoints/ats.scss
@@ -23,7 +23,7 @@ $font-family-sans-serif: "Open Sans", Arial, Helvetica, sans-serif;
 @import "../src/ats/positions";
 @import "../src/ats/task";
 @import "../src/ats/quick_search";
-@import "../src/ats/recaptcha";
+@import "../src/shared/recaptcha";
 
 // Custom component styles
 @import "../src/shared/components";
