--- a/app/assets/stylesheets/src/shared/_recaptcha.scss
+++ b/app/assets/stylesheets/src/shared/_recaptcha.scss
@@ -13,3 +13,7 @@
   // https://stackoverflow.com/questions/44543157/how-to-hide-the-google-invisible-recaptcha-badge
   visibility: hidden !important;
 }
+
+#recaptcha_message {
+  line-height: 1.125rem;
+}
