--- a/app/views/rodauth/create_account.html.slim
+++ b/app/views/rodauth/create_account.html.slim
@@ -71,4 +71,4 @@
       => t("rodauth.create_account_page_text_before_sign_in_link")
       a href=rodauth.login_path
         = t("rodauth.email_auth_page_title")
-    .mt-3.font-small.text-gray-600 = t("recaptcha.privacy_message_html")
+    .mt-3.font-small.text-gray-600#recaptcha_message = t("recaptcha.privacy_message_html")
