--- a/app/views/ats/positions/pipeline_tab.html.slim
+++ b/app/views/ats/positions/pipeline_tab.html.slim
@@ -132,11 +132,17 @@ ruby:
             = label_tag :assigned_only, "Assigned only", class: "form-check-label"
 
     /! MOBILE ONLY STAGE NAVIGATION
-    #pipeline-mobile-stage-nav.d-sm-none.nav.nav-pills.d-flex.justify-content-between.mt-3.mb-2 role="tablist"
-      .d-sm-none.dropdown.w-100.profile-mobile-nav data-controller="pipeline-column"
-        button.btn.form-control.d-flex.align-items-center.text-dark.dropdown-toggle.w-100.px-3 [
-            id="dropdownNavLink" data-bs-toggle="dropdown"]
-          span.hstack.gap-2 data-pipeline-column-target="dropdownPlaceholder"
+    #pipeline-mobile-stage-nav.d-sm-none.vstack.mt-3.mb-2 role="tablist"
+      .dropdown.profile-mobile-nav data-controller="pipeline-column"
+        = render ButtonComponent.new( \
+                   variant: :cancel,
+                   type: :button,
+                   id: "dropdownNavLink",
+                   class: "dropdown-toggle w-100",
+                   flex_content_position: :between,
+                   data: { bs_toggle: :dropdown },
+                 )
+          .hstack.gap-2 data-pipeline-column-target="dropdownPlaceholder"
               => @stages.first
               span.badge class="turbo_position_pipeline_#{@stages.first}_stage_counter"
                 = @grouped_placements[@stages.first][:count]
