fix(ui): correct stroke-width for arrow icon on page 500 (#216)

--- a/app/views/errors/500.html
+++ b/app/views/errors/500.html
@@ -17,6 +17,9 @@
       .btn .icon {
         margin: 0;
       }
+      .icon {
+        stroke-width: 1.25;
+      }
       .btn-small {
         --tblr-btn-font-size: 14px;
         --tblr-btn-padding-x: 9px;
