--- a/app/assets/stylesheets/src/shared/_scaffolds.scss
+++ b/app/assets/stylesheets/src/shared/_scaffolds.scss
@@ -32,6 +32,17 @@ body {
   min-width: 320px;
 }
 
+.form-control {
+  line-height: var(--tblr-body-line-height);
+  text-overflow: ellipsis;
+
+  &:focus {
+    box-shadow:
+      $box-shadow-input,
+      0 0 0 0.25rem rgba(var(--tblr-primary-rgb), 0.25);
+  }
+}
+
 // place the footer at the bottom of the page
 .wrapper {
   min-height: calc(100% - $footer-min-height);
