fix: return min-height for footer (#224)
Co-authored-by: ksnitsky <ksnitsky@gmail.com>

--- a/app/assets/stylesheets/src/ats/_main.scss
+++ b/app/assets/stylesheets/src/ats/_main.scss
@@ -21,6 +21,12 @@ hr {
   margin: 1rem 0;
 }
 
+// TODO: replace this with flex > flex-grow-1 as it done on career site
+// place the footer at the bottom of the page
+.wrapper {
+  min-height: calc(100% - $footer-min-height);
+}
+
 .header-edit-avatar-row .col-form-label-sm {
   padding-top: 0;
   padding-bottom: 0;
