fix(profiles/ui): tabs button now component (#234)

--- a/app/views/ats/candidates/_profile.html.slim
+++ b/app/views/ats/candidates/_profile.html.slim
@@ -77,10 +77,18 @@
         = link_to tab_labels[:activities], tab_ats_candidate_path(@candidate, :activities),
                   class: "nav-link #{'active' if @active_tab == 'activities'}"
   .d-md-none.dropdown.w-100.profile-mobile-nav
-    button.btn.form-control.dropdown-toggle.justify-content-between.w-100[
-        id="dropdownNavLink" data-bs-toggle="dropdown"]
+    = render ButtonComponent.new( \
+               variant: :cancel,
+               type: :button,
+               flex_content_position: :between,
+               id: "dropdownNavLink",
+               class: "w-100",
+               data: { bs_toggle: :dropdown },
+             ) do |c|
+      - c.with_icon(:chevron_down)
       span
         = tab_labels[@active_tab.to_sym]
+
     ul.dropdown-menu.w-100 aria-labelledby="dropdownNavLink"
       - if allowed_to?(:show_info?, @candidate)
         li = link_to tab_labels[:info], tab_ats_candidate_path(@candidate, :info),
