--- a/app/views/ats/positions/_profile.html.slim
+++ b/app/views/ats/positions/_profile.html.slim
@@ -22,43 +22,51 @@
     = render partial: "ats/tasks/tab_counter", locals: { pending_tasks_count: @pending_tab_tasks_count }
 
   section#tab-list.mt-2
-    ul.nav.nav-tabs role="tablist"
-      .d-none.d-md-flex
-        li.nav-item
-          = link_to_if @active_tab != "info", tab_labels[:info], tab_ats_position_path(@position, :info),
-                       class: "nav-link"
-            span.nav-link.active
-              = tab_labels[:info]
-        li.nav-item
-          = link_to_if @active_tab != "pipeline", tab_labels[:pipeline],
-                       tab_ats_position_path(@position, :pipeline), class: "nav-link"
-            span.nav-link.active
-              = tab_labels[:pipeline]
-        li.nav-item
-          = link_to_if @active_tab != "tasks", tab_labels[:tasks],
-                       tab_ats_position_path(@position, :tasks), class: "nav-link"
-            span.nav-link.active
-              = tab_labels[:tasks]
-        li.nav-item
-          = link_to_if @active_tab != "activities", tab_labels[:activities],
-                       tab_ats_position_path(@position, :activities),
-                       class: "nav-link"
-            span.nav-link.active
-              = tab_labels[:activities]
-      .d-md-none.dropdown.w-100.profile-mobile-nav
-        button.btn.form-control.dropdown-toggle.justify-content-between.w-100[
-            id="dropdownNavLink" data-bs-toggle="dropdown"]
-          span
-            = tab_labels[@active_tab.to_sym]
-        ul.dropdown-menu.w-100 aria-labelledby="dropdownNavLink"
-          li = link_to tab_labels[:info], tab_ats_position_path(@position, :info),
-                       class: "dropdown-item #{'active' if @active_tab == 'info'}"
-          li = link_to tab_labels[:pipeline], tab_ats_position_path(@position, :pipeline),
-                       class: "dropdown-item #{'active' if @active_tab == 'pipeline'}"
-          li = link_to tab_labels[:tasks], tab_ats_position_path(@position, :tasks),
-                       class: "dropdown-item #{'active' if @active_tab == 'tasks'}"
-          li = link_to tab_labels[:activities], tab_ats_position_path(@position, :activities),
-                       class: "dropdown-item #{'active' if @active_tab == 'activities'}"
+    ul.nav.nav-tabs.d-none.d-md-flex role="tablist"
+      li.nav-item
+        = link_to_if @active_tab != "info", tab_labels[:info], tab_ats_position_path(@position, :info),
+                     class: "nav-link"
+          span.nav-link.active
+            = tab_labels[:info]
+      li.nav-item
+        = link_to_if @active_tab != "pipeline", tab_labels[:pipeline],
+                     tab_ats_position_path(@position, :pipeline), class: "nav-link"
+          span.nav-link.active
+            = tab_labels[:pipeline]
+      li.nav-item
+        = link_to_if @active_tab != "tasks", tab_labels[:tasks],
+                     tab_ats_position_path(@position, :tasks), class: "nav-link"
+          span.nav-link.active
+            = tab_labels[:tasks]
+      li.nav-item
+        = link_to_if @active_tab != "activities", tab_labels[:activities],
+                     tab_ats_position_path(@position, :activities),
+                     class: "nav-link"
+          span.nav-link.active
+            = tab_labels[:activities]
+
+    .d-md-none.dropdown.w-100.profile-mobile-nav
+      = render ButtonComponent.new( \
+                 variant: :cancel,
+                 type: :button,
+                 flex_content_position: :between,
+                 id: "dropdownNavLink",
+                 class: "w-100",
+                 data: { bs_toggle: :dropdown },
+               ) do |c|
+        - c.with_icon(:chevron_down)
+        span
+          = tab_labels[@active_tab.to_sym]
+
+      ul.dropdown-menu.w-100 aria-labelledby="dropdownNavLink"
+        li = link_to tab_labels[:info], tab_ats_position_path(@position, :info),
+                     class: "dropdown-item #{'active' if @active_tab == 'info'}"
+        li = link_to tab_labels[:pipeline], tab_ats_position_path(@position, :pipeline),
+                     class: "dropdown-item #{'active' if @active_tab == 'pipeline'}"
+        li = link_to tab_labels[:tasks], tab_ats_position_path(@position, :tasks),
+                     class: "dropdown-item #{'active' if @active_tab == 'tasks'}"
+        li = link_to tab_labels[:activities], tab_ats_position_path(@position, :activities),
+                     class: "dropdown-item #{'active' if @active_tab == 'activities'}"
 / TAB LIST END
 
 div id="#{@page_id}-#{@active_tab}"
