chore(reset password page): set correct back path (#230)

--- a/app/views/rodauth/reset_password_request.html.slim
+++ b/app/views/rodauth/reset_password_request.html.slim
@@ -25,6 +25,5 @@
       .hstack.gap-2.mt-4
         = render ButtonComponent.new(class: "col")
           = rodauth.reset_password_request_button
-        /* TODO: redirect back depends from which page this was opened.
-        = render ButtonLinkComponent.new(ats_settings_path, class: "col", variant: :secondary)
+        = render ButtonLinkComponent.new(url_for(:back), class: "col", variant: :secondary)
           = t("rodauth.back_button")
